--- a/CSS/htask1.html
+++ b/CSS/htask1.html
@@ -26,8 +26,9 @@
     <div class="card-container">
       <div class="card">
         <img
-          src="https://t3.ftcdn.net/jpg/16/39/76/38/360_F_1639763826_yZ262ASI9lWoIlLtqqvVFWOhf0JoehhT.jpg"
+          src="https://images.unsplash.com/photo-1496181133206-80ce9b88a853?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bGFwdG9wfGVufDB8fDB8fHww"
           width="400px"
+          height="200px"
           alt=""
         />
         <div class="card-content">
@@ -43,8 +44,9 @@
 
       <div class="card">
         <img
-          src="https://t3.ftcdn.net/jpg/16/39/76/38/360_F_1639763826_yZ262ASI9lWoIlLtqqvVFWOhf0JoehhT.jpg"
+          src="https://images.unsplash.com/photo-1598965402089-897ce52e8355?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8c21hcnRwaG9uZXxlbnwwfHwwfHx8MA%3D%3D"
           width="400px"
+          height="200px"
           alt=""
         />
         <div class="card-content">
@@ -60,8 +62,9 @@
 
       <div class="card">
         <img
-          src="https://t3.ftcdn.net/jpg/16/39/76/38/360_F_1639763826_yZ262ASI9lWoIlLtqqvVFWOhf0JoehhT.jpg"
+          src="https://plus.unsplash.com/premium_photo-1679513691641-9aedddc94f96?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fEhlYWRwaG9uZXN8ZW58MHx8MHx8fDA%3D"
           width="400px"
+          height="200px"
           alt=""
         />
         <div class="card-content">
