--- a/flextasks/htask2.html
+++ b/flextasks/htask2.html
@@ -11,15 +11,18 @@
     <title>Flex home 2</title>
   </head>
   <body>
-    <header>
+    <header>  
       <div class="nav">
-        <nav>
+        <nav>  
           <h1>TravelNow</h1>
           <ul>
             <li><a href="#">About</a></li>
             <li><a href="#">Service</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
+          <div class="hamburger">
+            <i class="fa-solid fa-bars"></i>
+          </div>
         </nav>
       </div>
     </header>
